# leaGL

./: CMakeLists.txt  Makefile  README.md
include/: shadercomp.h  tri.h  windowinit.h
include/glad/: glad.h
src/: glad.c  main.c  shadercomp.c  tri.c  windowinit.c
